--- a/html/header.html
+++ b/html/header.html
@@ -8,9 +8,9 @@
 <body>
 
 <div id="header">
-	<ul> <a href="header.html" target="_blank"> <img src="logo.jpg">  </a>
-		<li><a href="header.html" target="_blank"> <img src="logo2.jpg">  </a></li>
+	<a href="header.html" target="_blank"> <img src="blindetenlogo.jpg">  </a>
 </div>
+
 
 <center>
 <div id="menu">
