--- a/html/login.html
+++ b/html/login.html
@@ -9,8 +9,7 @@
 
 
 <div id="header">
-	<ul> <a href="header.html" target="_blank"> <img src="logo.jpg">  </a>
-		<li><a href="header.html" target="_blank"> <img src="logo2.jpg">  </a></li>
+	<a href="header.html" target="_blank"> <img src="blindetenlogo.jpg">  </a>
 </div>
 
 <center>
