--- a/html/header.html
+++ b/html/header.html
@@ -8,16 +8,16 @@
 <body>
 
 <div id="header">
-	<a href="header.html" target="_blank"> <img src="blindetenlogo.jpg">  </a>
+	<a href="header.html"> <img src="blindetenlogo.png">  </a>
 </div>
 
 
 <center>
 <div id="menu">
     <ul>
-        <li><a href="/Wat is BlinDeten?/" target="_blank" title="Wat is BlinDeten?">Wat is BlinDeten?</a></li>  
-        <li><a href="/Registreer/" title="Registreer">Registreer</a></li>  
-		<li><a href="login.html" target="_blank" title="Log in">Log in</a></li> 
+        <li><a href="/Wat is BlinDeten?/" title="Wat is BlinDeten?">Wat is BlinDeten?</a></li>  
+        <li><a href="registreer.html" title="Registreer">Registreer</a></li>  
+		<li><a href="login.html" title="Log in">Log in</a></li> 
 <br>
 
 </center>
