--- a/html/registreer.html
+++ b/html/registreer.html
@@ -47,7 +47,7 @@
 		<a href="">Wachtwoord vergeten?</a> <a href="">Registreren</a>
        	<br>
 		<br>
-         <input type="submit" id="submit" value="Log in">
+         <input type="submit" id="submit" value="Registreer">
     </fieldset>
 </form>
 </center>
