--- a/html/login.html
+++ b/html/login.html
@@ -12,7 +12,6 @@
 	<a href="header.html"> <img src="blindetenlogo.png">  </a>
 </div>
 
-<center>
 <div id="menu">
     <ul>
         <li><a href="/Wat is BlinDeten?/" href="watisblindeten.html" title="Wat is BlinDeten?">Wat is BlinDeten?</a></li>  
@@ -20,11 +19,10 @@
         <li><a href="login.html" title="Log in">Log in</a></li> 
 <br>
 
-</center>
 </div>
 
-<center>
-<form id="login">
+
+<form>
     <h1>Log In</h1>
 	<br>
     <fieldset id="inputs">
@@ -41,7 +39,6 @@
          <input type="submit" id="submit" value="Log in">
     </fieldset>
 </form>
-</center>
 
 </body>
 </html>
