--- a/html/registreer.html
+++ b/html/registreer.html
@@ -4,53 +4,47 @@
 	<title>Registreren</title>
 	<link rel="stylesheet" type="text/css" href="style.css"></link>
 </head>
-
 <body>
-
 <div id="header">
 	<a href="header.html"> <img src="blindetenlogo.png">  </a>
 </div>
-
-
-<center>
 <div id="menu">
     <ul>
         <li><a href="/Wat is BlinDeten?/" title="Wat is BlinDeten?">Wat is BlinDeten?</a></li>  
         <li><a href="registreer.html" title="Registreer">Registreer</a></li>  
-		<li><a href="login.html" title="Log in">Log in</a></li> 
+		<li><a href="login.html" title="Log in">Log in</a></li>
+	</ul>
 <br>
-
-</center>
 </div>
-
-<center>
-<form id="login">
-<h1>Registreer</h1>
-	<br>
-    <fieldset id="inputs">
-        <input id="email" type="text" placeholder="E-mail" required>   
-        <br>
-		<br>
-		<input id="wachtwoord" type="password" placeholder="Wachtwoord" required>
-		<br>
-		<br>
-		<input id="birthday" type="date" size="2" maxlength="2" max="31" placeholder="Dag" required>
-	    <input id="birthday" type="date" size="5" maxlength="2" max="12" placeholder="Maand" required>
-		<input id="birthday" type="date" size="4" maxlength="4" max="1997" placeholder="Jaar" required>
-		<br>
-		<br>
-		<input type="radio" name="sex" value="male" checked>Man
-		<input type="radio" name="sex" value="female">Vrouw
-    </fieldset>
-    <fieldset id="actions">
-		<br>
-		<a href="">Wachtwoord vergeten?</a> <a href="">Registreren</a>
-       	<br>
-		<br>
-         <input type="submit" id="submit" value="Registreer">
-    </fieldset>
-</form>
-</center>
-
+<div class="content">
+	<div class="formcontainer">
+		<form>
+			<h1>Registreer</h1>
+			<br>
+			<fieldset id="inputs">
+				<input id="email" type="text" placeholder="E-mail" required>   
+				<br>
+				<br>
+				<input id="wachtwoord" type="password" placeholder="Wachtwoord" required>
+				<br>
+				<br>
+				<input id="birthday" type="date" size="2" maxlength="2" max="31" placeholder="Dag" required>
+				<input id="birthday" type="date" size="5" maxlength="2" max="12" placeholder="Maand" required>
+				<input id="birthday" type="date" size="4" maxlength="4" max="1997" placeholder="Jaar" required>
+				<br>
+				<br>
+				<input type="radio" name="sex" value="male" checked>Man
+				<input type="radio" name="sex" value="female">Vrouw
+			</fieldset>
+			<fieldset id="actions">
+				<br>
+				<a href="">Wachtwoord vergeten?</a> <a href="">Registreren</a>
+				<br>
+				<br>
+				 <input type="submit" id="submit" value="Registreer">
+			</fieldset>
+		</form>
+	</div>
+</div>
 </body>
 </html>
