--- a/html/registreer.html
+++ b/html/registreer.html
@@ -38,7 +38,9 @@
 			</fieldset>
 			<fieldset id="actions">
 				<br>
-				<a href="">Wachtwoord vergeten?</a> <a href="">Registreren</a>
+				<a href="">Wachtwoord vergeten?</a> 
+				<br>
+				<a href="">Registreren</a>
 				<br>
 				<br>
 				 <input type="submit" id="submit" value="Registreer">
