update voor fleur

--- a/html/header.html
+++ b/html/header.html
@@ -13,7 +13,7 @@
 
 <div id="menu">
     <ul>
-        <li><a href="/Wat is BlinDeten?/" title="Wat is BlinDeten?">Wat is BlinDeten?</a></li>  
+        <li><a href="watisblindeten.html" title="Wat is BlinDeten?">Wat is BlinDeten?</a></li>  
         <li><a href="registreer.html" title="Registreer">Registreer</a></li>  
 		<li><a href="login.html" title="Log in">Log in</a></li> 
 <br>
