--- a/html/login.html
+++ b/html/login.html
@@ -14,31 +14,35 @@
 
 <div id="menu">
     <ul>
-        <li><a href="/Wat is BlinDeten?/" href="watisblindeten.html" title="Wat is BlinDeten?">Wat is BlinDeten?</a></li>  
+        <li><a href="watisblindeten.html" href="watisblindeten.html" title="Wat is BlinDeten?">Wat is BlinDeten?</a></li>  
         <li><a href="registreer.html" title="Registreer">Registreer</a></li>  
         <li><a href="login.html" title="Log in">Log in</a></li> 
 <br>
 
 </div>
 
-
-<form>
-    <h1>Log In</h1>
-	<br>
-    <fieldset id="inputs">
-        <input id="email" type="text" placeholder="E-mail" required>   
-        <br>
-		<br>
-		<input id="wachtwoord" type="password" placeholder="Wachtwoord" required>
-    </fieldset>
-    <fieldset id="actions">
-		<br>
-		<a href="">Wachtwoord vergeten?</a> <a href="">Registreren</a>
-       	<br>
-		<br>
-         <input type="submit" id="submit" value="Log in">
-    </fieldset>
-</form>
+<div class="content">
+	<div class="formcontainer">
+		<form>
+			<h1>Log In</h1>
+			<br>
+			<fieldset id="inputs">
+				<input id="email" type="text" placeholder="E-mail" required>   
+				<br>
+				<br>
+				<input id="wachtwoord" type="password" placeholder="Wachtwoord" required>
+			</fieldset>
+			<fieldset id="actions">
+				<br>
+				<a href="">Wachtwoord vergeten?</a> 
+				<br>
+				<a href="">Registreren</a>
+				<br>
+				<br>
+				 <input type="submit" id="submit" value="Log in">
+			</fieldset>
+		</form>
+	</div>
 
 </body>
 </html>
