--- a/html/registreer.html
+++ b/html/registreer.html
@@ -10,7 +10,7 @@
 </div>
 <div id="menu">
     <ul>
-        <li><a href="/Wat is BlinDeten?/" title="Wat is BlinDeten?">Wat is BlinDeten?</a></li>  
+        <li><a href="watisblindeten.html" title="Wat is BlinDeten?">Wat is BlinDeten?</a></li>  
         <li><a href="registreer.html" title="Registreer">Registreer</a></li>  
 		<li><a href="login.html" title="Log in">Log in</a></li>
 	</ul>
@@ -40,7 +40,7 @@
 				<br>
 				<a href="">Wachtwoord vergeten?</a> 
 				<br>
-				<a href="">Registreren</a>
+				<a href="">Inloggen</a>
 				<br>
 				<br>
 				 <input type="submit" id="submit" value="Registreer">
