--- a/html/login.html
+++ b/html/login.html
@@ -36,10 +36,10 @@
 				<br>
 				<a href="">Wachtwoord vergeten?</a> 
 				<br>
-				<a href="">Registreren</a>
+				<a href="registreer.html">Registreren</a>
 				<br>
 				<br>
-				 <input type="submit" id="submit" value="Log in">
+				<input type="submit" id="submit" value="Log in">
 			</fieldset>
 		</form>
 	</div>
