--- a/html/registreer.html
+++ b/html/registreer.html
@@ -16,6 +16,7 @@
 	</ul>
 <br>
 </div>
+
 <div class="content">
 	<div class="formcontainer">
 		<form>
@@ -40,13 +41,12 @@
 				<br>
 				<a href="">Wachtwoord vergeten?</a> 
 				<br>
-				<a href="">Inloggen</a>
+				<a href="login.html">Inloggen</a>
 				<br>
 				<br>
-				 <input type="submit" id="submit" value="Registreer">
+				<input type="submit" id="submit" value="Registreer">
 			</fieldset>
 		</form>
 	</div>
-</div>
 </body>
 </html>
