--- a/html/termsofuse.html
+++ b/html/termsofuse.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head> 
-	<title>Wat is BlinDeten?</title>
+	<title>Terms Of Use</title>
 	<link rel="stylesheet" type="text/css" href="style.css"></link>
 </head>
 
@@ -17,14 +17,12 @@
         <li><a href="registreer.html" title="Registreer">Registreer</a></li>  
 		<li><a href="login.html" title="Log in">Log in</a></li> 
 <br>
-
-
 </div>
 
 <div class="content">
 	<div class="formcontainer">
 		<form>
-			<h1>Wat is BlinDeten?</h1>
+			<h1>Terms Of Use</h1>
 			<br>
 			<p> djsffljfgljdfgldfgjzldjf</p>
 			<br>
