--- a/html/faq.html
+++ b/html/faq.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head> 
-	<title>Wat is BlinDeten?</title>
+	<title>FAQ</title>
 	<link rel="stylesheet" type="text/css" href="style.css"></link>
 </head>
 
@@ -17,16 +17,14 @@
         <li><a href="registreer.html" title="Registreer">Registreer</a></li>  
 		<li><a href="login.html" title="Log in">Log in</a></li> 
 <br>
-
-
 </div>
 
 <div class="content">
 	<div class="formcontainer">
 		<form>
-			<h1>Wat is BlinDeten?</h1>
+			<h1>FAQ</h1>
 			<br>
-			<p> djsffljfgljdfgldfgjzldjf</p>
+			<p></p>
 			<br>
 		</form>
 	</div>
