--- a/html/registreer.html
+++ b/html/registreer.html
@@ -4,10 +4,13 @@
 	<title>Registreren</title>
 	<link rel="stylesheet" type="text/css" href="style.css"></link>
 </head>
+
 <body>
+
 <div id="header">
 	<a href="header.html"> <img src="blindetenlogo.png">  </a>
 </div>
+
 <div id="menu">
     <ul>
         <li><a href="watisblindeten.html" title="Wat is BlinDeten?">Wat is BlinDeten?</a></li>  
@@ -29,9 +32,9 @@
 				<input id="wachtwoord" type="password" placeholder="Wachtwoord" required>
 				<br>
 				<br>
-				<input id="birthday" type="date" size="2" maxlength="2" max="31" placeholder="Dag" required>
-				<input id="birthday" type="date" size="5" maxlength="2" max="12" placeholder="Maand" required>
-				<input id="birthday" type="date" size="4" maxlength="4" max="1997" placeholder="Jaar" required>
+				<input id="dag" type="day" size="2" maxlength="2" max="31" placeholder="Dag" required>
+				<input id="maand" type="month" size="5" maxlength="2" max="12" placeholder="Maand" required>
+				<input id="jaar" type="year" size="4" maxlength="4" max="1997" placeholder="Jaar" required>
 				<br>
 				<br>
 				<input type="radio" name="sex" value="male" checked>Man
@@ -48,5 +51,6 @@
 			</fieldset>
 		</form>
 	</div>
+</div>
 </body>
 </html>
