--- a/html/contact.html
+++ b/html/contact.html
@@ -24,7 +24,7 @@
 		<form>
 			<h1>Contact</h1>
 			<br>
-			<p> djsffljfgljdfgldfgjzldjf</p>
+			<h2>Heeft u een vraag of opmerking, mail dan naar: <a href="info@blindeten.nl" title="E-mail">info@blindeten.nl</a></h2>
 			<br>
 		</form>
 	</div>
