--- a/html/faq.html
+++ b/html/faq.html
@@ -24,7 +24,8 @@
 		<form>
 			<h1>FAQ</h1>
 			<br>
-			<p></p>
+			<h2><b>Wat als er niemand anders reserveert op dezelfde tafel als ik?</b>
+			<br></h2>
 			<br>
 		</form>
 	</div>
