--- a/html/login.html
+++ b/html/login.html
@@ -18,20 +18,22 @@
         <li><a href="registreer.html" title="Registreer">Registreer</a></li>  
         <li><a href="login.html" title="Log in">Log in</a></li> 
 <br>
-
 </div>
 
 <div class="content">
-	<div class="formcontainer">
+	<div class="maincontent">
+		
 		<form>
 			<h1>Log In</h1>
 			<br>
+			
 			<fieldset id="inputs">
 				<input id="email" type="text" placeholder="E-mail" required>   
 				<br>
 				<br>
 				<input id="wachtwoord" type="password" placeholder="Wachtwoord" required>
 			</fieldset>
+			
 			<fieldset id="actions">
 				<br>
 				<a href="">Wachtwoord vergeten?</a> 
@@ -42,6 +44,7 @@
 				<input type="submit" id="submit" value="Log in">
 			</fieldset>
 		</form>
+	
 	</div>
 
 </body>
