--- a/html/registreer.html
+++ b/html/registreer.html
@@ -21,10 +21,10 @@
 </div>
 
 <div class="content">
-	<div class="formcontainer">
+	<div class="maincontent">
 		<form>
-			<h1>Registreer</h1>
-			<br>
+			
+			<h1>Registreer</h1><br>
 			<fieldset id="inputs">
 				<input id="email" type="text" placeholder="E-mail" required>   
 				<br>
@@ -40,6 +40,7 @@
 				<input type="radio" name="sex" value="male" checked>Man
 				<input type="radio" name="sex" value="female">Vrouw
 			</fieldset>
+			
 			<fieldset id="actions">
 				<br>
 				<a href="">Wachtwoord vergeten?</a> 
@@ -49,8 +50,8 @@
 				<br>
 				<input type="submit" id="submit" value="Registreer">
 			</fieldset>
+		
 		</form>
 	</div>
-</div>
 </body>
 </html>
