--- a/html/termsofuse.html
+++ b/html/termsofuse.html
@@ -20,7 +20,7 @@
 </div>
 
 <div class="content">
-	<div class="formcontainer">
+	<div class="maincontent">
 		<form>
 			<h1>Terms Of Use</h1>
 			<br>
