--- a/html/watisblindeten.html
+++ b/html/watisblindeten.html
@@ -6,46 +6,39 @@
 </head>
 
 <body>
+
 <div id="header">
 	<a href="header.html"> <img src="blindetenlogo.png">  </a>
 </div>
 
 
 <div id="menu">
+    
     <ul>
         <li><a href="watisblindeten.html" title="Wat is BlinDeten?">Wat is BlinDeten?</a></li>  
         <li><a href="registreer.html" title="Registreer">Registreer</a></li>  
 		<li><a href="login.html" title="Log in">Log in</a></li> 
 <br>
-
-
 </div>
 
 <div class="content">
-	<div class="formcontainer">
-		<form>
-			<h1>Wat is BlinDeten?</h1>
-			<br>
+	<div class="maincontent">
+	
+	<h1>Wat is BlinDeten?</h1><br>
 			
-			<h2>
+		<h2>
+			Zin om uit eten te gaan? Maar u bent alleen en wilt nieuwe mensen ontmoeten? Of gewoon gezellig met iemand uit eten gaan? <br><br>
+			Dan bent u bij ons aan het goede adres! </br>
+			<br><br>
 
-Zin om uit eten te gaan? Maar u bent alleen en wilt nieuwe mensen ontmoeten? <br> Of gewoon gezellig met iemand uit eten gaan? 
-<br>Dan bent u bij ons aan het goede adres! </br>
+		<b><h3>Hoe werkt het?</h3></b></br>
 
-<br><br><br><b>
-Hoe werkt het? 
-</b></br></br>
+			Heel simpel! Op het kaartje ziet u de verschillende restaurants staan waar u kunt reserveren. Bent u de eerste die ergens reserveert, dan moet u nog even geduld hebben. Wanneer er een persoon bij u aan tafel schuift krijgen jullie beiden een bevestigingsmail en wensen wij jullie een gezellig diner toe!</br>
 
-
-Heel simpel! Op het kaartje ziet u de verschillende restaurants staan waar u kunt reserveren. Bent u de eerste die ergens reserveert, dan moet u nog even geduld hebben. Wanneer er een persoon bij u aan tafel schuift krijgen jullie beiden een bevestigingsmail en wensen wij jullie een gezellig diner toe!</br>
-
-<br>
-Voor vragen zie de FAQ </br>
-</h2>
-			
-			<br>
-		</form>
+			<br><h3>Voor vragen zie de <a href="faq.html" title="veelgestelde vragen">FAQ</a></h3></br>
+		</h2><br>
+	
 	</div>
-</div>
+
 </body>
 </html>
