uitloggen en mijnaccount

--- a/html/uitloggen.html
+++ b/html/uitloggen.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head> 
-	<title>FAQ</title>
+	<title>BlinDeten</title>
 	<link rel="stylesheet" type="text/css" href="style.css"></link>
 </head>
 
@@ -19,14 +19,8 @@
 <br>
 </div>
 
-<div class="content">
-	<div class="formcontainer">
-			<h1>FAQ</h1>
-			<br>
-			<h2><b>Wat als er niemand anders reserveert op dezelfde tafel als ik?</b>
-			<br></h2>
-			<br>
-	</div>
+<div id="uitloggen">
+	<h4>Welkom user_name!</h4> <a href="mijnaccount.html">Mijn Account</a> <a href="header.html">Uitloggen</a>
 </div>
 </body>
 </html>
