puntjes op de i

--- a/html/faq.html
+++ b/html/faq.html
@@ -33,9 +33,14 @@
 		<br>
 		<p id="account hebben" class="hidden">Ja dit is nodig. Zo kunnen wij u een bevestigingsmail sturen en u naam doorgeven voor de reservering.</p>
 
+		<h2><br><b><a href="javascript:showtext('alleen eten');" title="Wat als niemand reserveert?">Wat als er niemand op dezelfde tafel als ik reserveer?</a></b></h2>
+		<br>
+		<p id="alleen eten" class="hidden">Dan kunt u gerust alleen eten. U krijgt echter geen tweede bevestigingsmail.</p>
+
 		<h2><br><b><a href="javascript:showtext('restaurant toevoegen');" title="Hoe voeg ik mijn restaurant toe?">Ik wil mijn restaurant ook op het kaartje hebben, hoe moet dat? </a></b></h2>
 		<br>
 		<p id="restaurant toevoegen" class="hidden">U kunt ons een mailtje sturen en dan zullen wij contact met u opnemen.</p>
+
 
 		<br>
 
