--- a/html/termsofuse.html
+++ b/html/termsofuse.html
@@ -19,18 +19,14 @@
 <br>
 </div>
 
-<div class="content">
-<<<<<<< HEAD
+<div class="content">	
 	<div class="maincontent">
-		<form>
-=======
-	<div class="formcontainer">
->>>>>>> c5dd89696a7c9348af525e67f174bf92f64ff130
+
 			<h1>Terms Of Use</h1>
 			<br>
-			<h2>1.You must be at least 18 years old to use the Service.
-				<br>
-				2. 3.You are responsible for any activity that occurs 
+			<h2>1. You must be at least 18 years old to use the Service.
+				<br><br>
+				2. You are responsible for any activity that occurs 
 				through your account and you agree you will not sell, 
 				transfer, license or assign your account, 
 				username, or any account rights. With the exception of 
@@ -42,54 +38,54 @@
 				registration and at all other times will be true, accurate, current 
 				and complete and you agree to update your information as necessary 
 				to maintain its truth and accuracy.
-				<br>
+				<br><br>
 				3.You agree that you will not solicit, collect or use the login 
 				credentials of other BlinDeten users.
-				<br>
+				<br><br>
 				4. You are responsible for keeping your password secret and secure
-				<br>
+				<br><br>
 				5. You may not use the Service for any illegal or unauthorized purpose.
 				You agree to comply with all laws, rules and regulations 
 				(for example, federal, state, local and provincial) applicable to your 
 				use of the Service and your Content (defined below), including but not 
 				limited to, copyright laws.
-				<br>
-				6. 13.You must not interfere or disrupt the Service or servers or 
+				<br><br>
+				6. You must not interfere or disrupt the Service or servers or 
 				networks connected to the Service, including by transmitting any worms, 
 				viruses, spyware, malware or any other code of a destructive or 
 				disruptive nature. You may not inject content or code or otherwise
 				alter or interfere with the way any BlinDeten page is rendered or 
 				displayed in a user's browser or device.
-				<br>
-				7. 17.Violation of these Terms of Use may, in BlinDeten's sole discretion,
+				<br><br>
+				7. Violation of these Terms of Use may, in BlinDeten's sole discretion,
 				result in termination of your BlinDeten account. You understand and agree 
 				that BlinDeten cannot and will not be responsible for the Content posted 
 				on the Service and you use the Service at your own risk. If you violate 
 				the letter or spirit of these Terms of Use, or otherwise create risk or 
 				possible legal exposure for BlinDeten, we can stop providing all or part 
 				of the Service to you.
-				<br>
+				<br><br>
 				8. We reserve the right to modify or terminate the Service or your access 
 				to the Service for any reason, without notice, at any time, and without 
 				liability to you. You can deactivate your BlinDeten account by logging
 				into the Service and completing the form available here:
-				https://???????.com/accounts/remove/request/. If we terminate your
+				LINK OM ACCOUNT TE VERWIJDEREN. If we terminate your
 				access to the Service or you use the form detailed above to deactivate
 				your account, your data will no longer be accessible through your account,
 				but those materials and data may persist and appear within the Service
-				<br>
+				<br><br>
 				9.Upon termination, all licenses and other rights granted to you in these
 				Terms of Use will immediately cease.
-				<br>
+				<br><br>
 				10. We reserve the right to refuse access to the Service to anyone for 
 				any reason at any time.
-				<br>
+				<br><br>
 				11. You are solely responsible for your interaction with other users 
 				of the Service, whether online or offline. You agree that BlinDeten is 
 				not responsible or liable for the conduct of any user. BlinDeten reserves 
 				the right, but has no obligation, to monitor or become involved in disputes
 				between you and other users
-				<br>
+				<br><br>
 				12. There may be links from the Service, or from communications you 
 				receive from the Service, to third-party web sites or features. 
 				There may also be links to third-party web sites or features in images 
@@ -100,10 +96,10 @@
 				profile on the Service with a third-party web site or feature. 
 				YOUR CORRESPONDENCE AND BUSINESS DEALINGS WITH THIRD PARTIES FOUND 
 				THROUGH THE SERVICE ARE SOLELY BETWEEN YOU AND THE THIRD PARTY.
-				<br>
+				<br><br>
 				13. You agree that you are responsible for all data charges you 
 				incur through use of the Service.
-				<br>
+				<br><br>
 				14. The BlinDeten name and logo are trademarks of BlinDeten, 
 				and may not be copied, imitated or used, in whole or in part, 
 				without the prior written permission of BlinDeten, except in 
@@ -118,6 +114,5 @@
 			
 			<br>
 	</div>
-</div>
 </body>
 </html>
