gegevens aanpassen en veranderen

--- a/html/login.html
+++ b/html/login.html
@@ -36,7 +36,7 @@
 			
 			<fieldset id="actions">
 				<br>
-				<a href="">Wachtwoord vergeten?</a> 
+				<a href="wachtwoordvergeten.html">Wachtwoord vergeten?</a> 
 				<br>
 				<a href="registreer.html">Registreren</a>
 				<br>
