--- a/html/gegevenswijzigen.html
+++ b/html/gegevenswijzigen.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head> 
-	<title>Mijn Account</title>
+	<title>Gegevens Veranderen</title>
 	<link rel="stylesheet" type="text/css" href="style.css"></link>
 </head>
 
