--- a/html/uitloggen.html
+++ b/html/uitloggen.html
@@ -20,7 +20,7 @@
 </div>
 
 <div id="uitloggen">
-	<h4>Welkom user_name!</h4> <a href="mijnaccount.html">Mijn Account</a> <a href="header.html">Uitloggen</a>
+	<h4>Welkom user_name! <a href="mijnaccount.html">Mijn Account</a> <a href="header.html">Uitloggen</a></h4>
 </div>
 </body>
 </html>
